Removed qj.width and qj.height overrides

--- a/example/example.html
+++ b/example/example.html
@@ -80,8 +80,8 @@ qj.tick(function() {
 */
 
 // Test 3: Stage Test
-qj.width = 2000;
-qj.height = 2000;
+//qj.width = 2000;
+//qj.height = 2000;
 
 // menu
 qj.run('menu', function() {
